<resources>
    <string name="app_name">mTUO</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_out">Output</string>
    <string name="title_activity_in">Input</string>
    <string name="title_activity_history">History</string>

    <string name="action_output">Output</string>
    <string name="action_xml">Update XMLs</string>
    <string name="action_custom">Customdecks</string>
    <string name="action_own">Ownedcards</string>
    <string name="action_history">History</string>
    <string name="action_settings">Settings</string>
    <string name="action_donate">Donate</string>
    <string name="action_exit">Exit</string>
    <string name="action_clear_history">Clear History</string>
    <string name="action_save">Save</string>

    <string name="pt_restart">RESTART MAY BE NECESSARY TO APPLY CHANGES</string>


    <string name="pt_general">General</string>

    <string name="pt_notification">Notifications</string>
    <string name="p_notification_vibrate">Notification Vibrate</string>
    <string name="pp_notification_vibrate">Vibrate on simulation finish</string>
    <string name="p_notification_sound">Notification Sound</string>
    <string name="pp_notification_sound">Sound on simulation finish</string>
    <string name="pr_sound">Sound</string>
    <string name="p_notification_led">Notification LED</string>
    <string name="pp_notification_led">LED on simulation finish</string>


    <string name="pt_output_history">Output &amp; History</string>
    <string name="p_history">History</string>
    <string name="pp_history">Save Output in tuo folder</string>


    <string name="s_save">Save</string>
    <string name="s_runsim">Queue Simulation</string>
    <string name="s_updatexml">Update XMLs</string>
    <string name="s_ownedcards">Ownedcards</string>
    <string name="s_customdecks">Customdecks</string>
    <string name="s_mydeck">My Deck:</string>
    <string name="s_myfort">My Fort:</string>
    <string name="s_enemydeck">Enemy Deck:</string>
    <string name="s_enemyfort">Enemy Fort:</string>
    <string name="s_effect">Effect:</string>
    <string name="s_operation">Operation:</string>
    <string name="s_mode">Mode:</string>
    <string name="s_dominion">Dominion:</string>
    <string name="s_strategy">Strategy:</string>
    <string name="s_flags">Flags:</string>
    <string name="s_monofaction">Mono:</string>
    <string name="s_order">Order:</string>
    <string name="s_endgame">Endgame:</string>
    <string name="s_fund">Fund:</string>
    <string name="s_threads">Threads:</string>
    <string name="s_iterations1">Iterations:</string>
    <string name="s_iterations2">Iterations 2 (climbex/anneal):</string>
    <string name="s_iterations3">Iterations 3 (anneal):</string>

    <string-array name="a_effects">
        <item></item>
        <item>Crackdown</item>
        <item>Devotion</item>
        <item>Unity</item>
        <item>Iron-Will</item>
        <item>Cold-Sleep</item>
        <item>Blood-Vengeance</item>
        <item>Oath-of-Loyalty</item>
        <item>Furiosity</item>
        <item>TemporalBacklash</item>
        <item>CriticalReach</item>
        <item>Devour</item>
        <item>HaltedOrders</item>
        <item>ZealotsPreservation</item>
        <item>Virulence</item>
        <item>Enfeeble all X</item>
        <item>Enhance all S X</item>
        <item>Evolve n S1 S2</item>
        <item>Heal all X</item>
        <item>Mortar X</item>
        <item>Protect all X</item>
        <item>Rally all X</item>
        <item>Siege all X</item>
        <item>Strike all X</item>
        <item>Weaken all X</item>
        <item>Brigade</item>
        <item>Bloodlust X</item>
        <item>Counterflux</item>
        <item>Divert</item>
        <item>EnduringRage</item>
        <item>Fortification</item>
        <item>Heroism</item>
        <item>Metamorphosis</item>
        <item>Megamorphosis</item>
        <item>Revenge X</item>
        <item>TurningTides</item>
    </string-array>

    <string-array name="a_endgame">
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>

    <string-array name="a_order">
        <item>random</item>
        <item>ordered</item>
        <item>flexible</item>
    </string-array>

    <string-array name="a_dominion">
        <item>dom-owned</item>
        <item>dom-maxed</item>
        <item>dom-none</item>
    </string-array>

    <string-array name="a_strategy">
        <item></item>
        <item>recent</item>
        <item>jam</item>
        <item>mortar</item>
        <item>siege</item>
        <item>strike</item>
        <item>sunder</item>
        <item>weaken</item>
        <item>enhance</item>
        <item>evolve</item>
        <item>heal</item>
        <item>mend</item>
        <item>overload</item>
        <item>protect</item>
        <item>rally</item>
        <item>fortify</item>
        <item>enrage</item>
        <item>entrap</item>
        <item>rush</item>
        <item>mimic</item>
        <item>armor</item>
        <item>avenge</item>
        <item>scavenge</item>
        <item>corrosive</item>
        <item>counter</item>
        <item>evade</item>
        <item>subdue</item>
        <item>absorb</item>
        <item>flying</item>
        <item>payback</item>
        <item>revenge</item>
        <item>tribute</item>
        <item>refresh</item>
        <item>wall</item>
        <item>barrier</item>
        <item>coalition</item>
        <item>legion</item>
        <item>pierce</item>
        <item>rupture</item>
        <item>swipe</item>
        <item>drain</item>
        <item>venom</item>
        <item>hunt</item>
        <item>berserk</item>
        <item>inhibit</item>
        <item>sabotage</item>
        <item>leech</item>
        <item>poison</item>
        <item>allegiance</item>
        <item>flurry</item>
        <item>valor</item>
        <item>stasis</item>
        <item>summon</item>
        <item>bravery</item>
        <item>enfeeble</item>
        <item>mark</item>
    </string-array>

    <string-array name="a_monofaction">
        <item></item>
        <item>imperial</item>
        <item>raider</item>
        <item>bloodthristy</item>
        <item>xeno</item>
        <item>righteous</item>
        <item>progenitor</item>
    </string-array>

    <string-array name="a_operation">
        <item>sim</item>
        <item>climb</item>
        <item>reorder</item>
        <item>climbex</item>
        <item>anneal</item>
        <item>debug</item>
        <item>climb_forts</item>
    </string-array>

    <string-array name="a_mode">
        <item>pvp</item>
        <item>pvp-defense</item>
        <item>gw</item>
        <item>gw-defense</item>
        <item>brawl</item>
        <item>brawl-defense</item>
        <item>raid</item>
        <item>surge</item>
        <item>campaign</item>
    </string-array>
    <string-array name="a_restart_keys">
        <item>notification_vibrate</item>
        <item>notification_sound</item>
        <item>notification_sound_uri</item>
        <item>notification_led</item>
        <item>history</item>
    </string-array>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="pref_title_social_recommendations">Nothing</string>
    <string name="pref_description_social_recommendations">Placeholder </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="pt_vibrate">Vibrate</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="run_title">Default run action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
