<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->


    <SwitchPreference
        android:key="notification_vibrate"
        android:title="@string/p_notification_vibrate"
        android:summary="@string/pp_notification_vibrate"
        android:defaultValue="false" />
    <SwitchPreference
        android:key="notification_sound"
        android:title="@string/p_notification_sound"
        android:summary="@string/pp_notification_sound"
        android:defaultValue="false" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notification_sound"
        android:key="notification_sound_uri"
        android:ringtoneType="notification"
        android:title="@string/pr_sound" />

    <SwitchPreference
        android:key="notification_led"
        android:title="@string/p_notification_led"
        android:summary="@string/pp_notification_led"
        android:defaultValue="false" />



</PreferenceScreen>
