<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.declan.myapplication.MainActivity">
    <item
        android:id="@+id/action_output"
        android:orderInCategory="100"
        android:title="@string/action_output"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_xml"
        android:orderInCategory="100"
        android:title="@string/action_xml"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_own"
        android:orderInCategory="100"
        android:title="@string/action_own"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_custom"
        android:orderInCategory="100"
        android:title="@string/action_custom"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:title="@string/action_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
